--- a/CleanArchitectureMVC.Infra.IoC/CleanArchitectureMVC.Infra.IoC.csproj
+++ b/CleanArchitectureMVC.Infra.IoC/CleanArchitectureMVC.Infra.IoC.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CleanArchitectureMVC.Application\CleanArchitectureMVC.Application.csproj" />
     <ProjectReference Include="..\CleanArchitectureMVC.Domain\CleanArchitectureMVC.Domain.csproj" />
     <ProjectReference Include="..\CleanArchitectureMVC.Infra.Data\CleanArchitectureMVC.Infra.Data.csproj" />
